feat: files panel colors

--- a/public/login.html
+++ b/public/login.html
@@ -9,7 +9,7 @@
     <div>
         <label>
             Password:
-            <input type="password" name="password" required>
+            <input type="password" name="pass" required>
         </label>
     </div>
     <button type="submit">Login</button>
