--- a/public/layout.html
+++ b/public/layout.html
@@ -3,9 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="color-scheme" content="dark">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sol Mail | {{ title }}</title>
     <link rel="stylesheet" href="/app/index.css">
+    <link rel="shortcut icon" href="/app/favicon.svg" type="image/svg+xml">
+    <link rel="icon" href="/app/favicon.svg" type="image/svg+xml">
 </head>
 
 <body>
