--- a/public/upload.html
+++ b/public/upload.html
@@ -1,7 +1,7 @@
 <h1>File Upload</h1>
 <form>
     <div>
-        <label for="mailName">Mail Name:</label>
+        <label for="mailName">Subject:</label>
         <input type="text" name="mailName" id="mailName" placeholder="Enter mail name" required>
     </div>
     <div>
