feat: admin search

--- a/public/admin.html
+++ b/public/admin.html
@@ -1,3 +1,11 @@
 <h1>Users Mails</h1>
+<section>
+    <label>
+        Search:
+        <input type="text" id="search"
+            placeholder="Enter search term. Available masks: user:$user, name:$name, file:$file">
+    </label>
+</section>
+
 <div id="app"></div>
 <link rel="stylesheet" href="/app/pages/mails.css">
