feat: admin inbox

--- a/public/admin.html
+++ b/public/admin.html
@@ -6,6 +6,10 @@
             placeholder="Enter search term. Available masks: user:$user, name:$name, file:$file">
     </label>
 </section>
+<aside>
+    New Mails:
+    <ul id="notifications"></ul>
+</aside>
 
 <div id="app"></div>
 <link rel="stylesheet" href="/app/pages/mails.css">
