feat: mail content

--- a/public/upload.html
+++ b/public/upload.html
@@ -5,8 +5,12 @@
         <input type="text" name="mailName" id="mailName" placeholder="Enter mail name" required>
     </div>
     <div>
+        <label for="body">Content:</label>
+        <textarea name="body" id="body" placeholder="Enter mail content"></textarea>
+    </div>
+    <div>
         <label for="filefield">Files:</label>
-        <input type="file" name="filefield" id="filefield" multiple required>
+        <input type="file" name="filefield" id="filefield" multiple>
     </div>
     <input type="submit" value="Upload">
 </form>
