feat: public mails (all sent by admin)

--- a/public/layout.html
+++ b/public/layout.html
@@ -17,6 +17,7 @@
             <li><a href="/page/login">Login</a></li>
             <li><a href="/page/upload">Upload Files</a></li>
             <li><a href="/page/mails">View Your Mails</a></li>
+            <li><a href="/page/mails?public=true">View Public Mails</a></li>
             <li><a href="#" onclick="logout()">Logout</a></li>
         </ul>
     </nav>
