--- a/public/mails.html
+++ b/public/mails.html
@@ -1,4 +1,4 @@
-<h1>Your Mails</h1>
+<h1><span id="mail-type"></span> Mails</h1>
 <div class="mails-container">
     <p>Loading your mails...</p>
 </div>
