feat: hide logged as

--- a/public/layout.html
+++ b/public/layout.html
@@ -13,7 +13,7 @@
 
 <body>
     <nav>
-        <div id="who"></div>
+        <div>👤 <span id="who"></span></div>
         <ul>
             <li><a href="/page/login">Login</a></li>
             <li><a href="/page/upload">Upload Files</a></li>
@@ -27,10 +27,7 @@
     <script src="/app/logout.js"></script>
     <script src="/app/pages/{{ name }}.js" type="module"></script>
     <link rel="stylesheet" href="/app/pages/{{ name }}.css">
-    <script type="module">
-        const loginAs = localStorage.getItem("name");
-        if (loginAs) qs("#who").innerHTML = `👤 ${loginAs}`;
-    </script>
+    <script src="/app/as.js" type="module"></script>
 </body>
 
 </html>
