--- a/public/admin.html
+++ b/public/admin.html
@@ -1,13 +1,13 @@
-<h1>Users Mails</h1>
+<h1 translate>Users Mails</h1>
 <section>
     <label>
-        Search:
+        <span translate>Search</span>:
         <input type="text" id="search"
             placeholder="Enter search term. Available masks: user:$user, name:$name, file:$file">
     </label>
 </section>
 <aside>
-    New Mails:
+    <span translate>New Mails</span>:
     <ul id="notifications"></ul>
 </aside>
 
