--- a/public/login.html
+++ b/public/login.html
@@ -1,17 +1,17 @@
-<h1>Login</h1>
+<h1 translate>Login</h1>
 <form>
     <div>
         <label>
-            Name:
+            <span translate>Name</span>:
             <input type="text" name="name" required>
         </label>
     </div>
     <div>
         <label>
-            Password:
+            <span translate>Password</span>:
             <input type="password" name="pass" required>
         </label>
     </div>
-    <button type="submit">Login</button>
+    <button type="submit" translate>Login</button>
 </form>
 <p id="error-message" class="error-message"></p>
