--- a/public/layout.html
+++ b/public/layout.html
@@ -15,11 +15,11 @@
     <nav>
         <div>👤 <span id="who"></span></div>
         <ul>
-            <li><a href="/page/login">Login</a></li>
-            <li><a href="/page/upload">Upload Files</a></li>
-            <li><a href="/page/mails">View Your Mails</a></li>
-            <li><a href="/page/mails?public=true">View Public Mails</a></li>
-            <li><a href="#" onclick="logout()">Logout</a></li>
+            <li><a href="/page/login" translate>Login</a></li>
+            <li><a href="/page/upload" translate>Upload Files</a></li>
+            <li><a href="/page/mails" translate>View Your Mails</a></li>
+            <li><a href="/page/mails?public=true" translate>View Public Mails</a></li>
+            <li><a href="#" onclick="logout()" translate>Logout</a></li>
         </ul>
     </nav>
     <script src="/app/html.js"></script>
@@ -28,6 +28,7 @@
     <script src="/app/pages/{{ name }}.js" type="module"></script>
     <link rel="stylesheet" href="/app/pages/{{ name }}.css">
     <script src="/app/as.js" type="module"></script>
+    <script src="/app/lang.js" type="module"></script>
 </body>
 
 </html>
