--- a/public/upload.html
+++ b/public/upload.html
@@ -1,17 +1,17 @@
-<h1>File Upload</h1>
+<h1 translate>File Upload</h1>
 <form>
     <div>
-        <label for="mailName">Subject:</label>
+        <label for="mailName"><span translate>Subject</span>:</label>
         <input type="text" name="mailName" id="mailName" placeholder="Enter mail name" required>
     </div>
     <div>
-        <label for="body">Content:</label>
+        <label for="body"><span translate>Content</span>:</label>
         <textarea name="body" id="body" placeholder="Enter mail content"></textarea>
     </div>
     <div>
-        <label for="filefield">Files:</label>
+        <label for="filefield"><span translate="">Files</span>:</label>
         <input type="file" name="filefield" id="filefield" multiple>
     </div>
-    <input type="submit" value="Upload">
+    <button type="submit" translate>Send Mail</button>
 </form>
 <p id="message" class="message"></p>
