--- a/public/layout.html
+++ b/public/layout.html
@@ -24,11 +24,11 @@
     </nav>
     <script src="/app/html.js"></script>
     {{ body }}
+    <script src="/app/lang.js"></script>
     <script src="/app/logout.js"></script>
     <script src="/app/pages/{{ name }}.js" type="module"></script>
     <link rel="stylesheet" href="/app/pages/{{ name }}.css">
     <script src="/app/as.js" type="module"></script>
-    <script src="/app/lang.js" type="module"></script>
 </body>
 
 </html>
