--- a/public/login.html
+++ b/public/login.html
@@ -1,17 +1,17 @@
-<h1 translate>Login</h1>
+<h1 translate="Login">Login</h1>
 <form>
     <div>
         <label>
-            <span translate>Name</span>:
+            <span translate="Name">Name</span>:
             <input type="text" name="name" required>
         </label>
     </div>
     <div>
         <label>
-            <span translate>Password</span>:
+            <span translate="Password">Password</span>:
             <input type="password" name="pass" required>
         </label>
     </div>
-    <button type="submit" translate>Login</button>
+    <button type="submit" translate="Login">Login</button>
 </form>
 <p id="error-message" class="error-message"></p>
