--- a/public/layout.html
+++ b/public/layout.html
@@ -13,7 +13,7 @@
 
 <body>
     <nav>
-        <div>👤 <span id="who"></span></div>
+        <div>👤 <span id="who" translate="Click to reveal">Click to reveal</span></div>
         <ul>
             <li><a href="/page/login" translate="Login">Login</a></li>
             <li><a href="/page/upload" translate="Upload Files">Upload Files</a></li>
