--- a/public/layout.html
+++ b/public/layout.html
@@ -16,11 +16,11 @@
         <p>☰</p>
         <div>👤 <span id="who" translate="Click to reveal">Click to reveal</span></div>
         <ul>
-            <li><a href="/page/login" translate="Login">Login</a></li>
-            <li><a href="/page/upload" translate="Upload Files">Upload Files</a></li>
-            <li><a href="/page/mails" translate="View Your Mails">View Your Mails</a></li>
-            <li><a href="/page/mails?public=true" translate="View Public Mails">View Public Mails</a></li>
-            <li><a href="#" onclick="logout()" translate="Logout">Logout</a></li>
+            <li><a href="/page/login" translate="Login"></a></li>
+            <li><a href="/page/upload" translate="Upload Files"></a></li>
+            <li><a href="/page/mails" translate="View Your Mails"></a></li>
+            <li><a href="/page/mails?public=true" translate="View Public Mails"></a></li>
+            <li><a href="#" onclick="logout()" translate="Logout"></a></li>
         </ul>
     </nav>
     <script src="/app/html.js"></script>
