--- a/public/layout.html
+++ b/public/layout.html
@@ -27,7 +27,7 @@
     <script src="/app/html.js"></script>
     {{ body }}
     <script src="/app/lang.js"></script>
-    <script src="/app/pages/logout.js"></script>
+    <script src="/app/pages/logout.js" type="module"></script>
     <script src="/app/pages/{{ name }}.js" type="module"></script>
     <link rel="stylesheet" href="/app/pages/{{ name }}.css">
     <script src="/app/as.js" type="module"></script>
