feat: update upload files

--- a/public/upload.html
+++ b/public/upload.html
@@ -8,10 +8,14 @@
         <label for="body"><span translate="Content"></span>:</label>
         <textarea name="body" id="body" translate-placeholder="Enter mail content"></textarea>
     </div>
+
     <div>
         <label for="filefield"><span translate="Files"></span>:</label>
         <input type="file" name="filefield" id="filefield" multiple>
     </div>
+
+    <ul id="filesList"></ul>
+
     <button type="submit" translate="Send Mail"></button>
 </form>
 <p id="message" class="message"></p>
