--- a/public/layout.html
+++ b/public/layout.html
@@ -26,6 +26,13 @@
     <div id="popup-container"></div>
     <script src="/app/html.js"></script>
     {{ body }}
+    <footer>
+        <p>Sol Mail - Self-Hosted File & Message Portal</p>
+        <p>
+            Made with 💜 by
+            <a href="https://github.com/wxn0brP" target="_blank" style="color: var(--accent);">@wxn0brP</a>
+        </p>
+    </footer>
     <script src="/app/lang.js"></script>
     <script src="/app/pages/logout.js" type="module"></script>
     <script src="/app/pages/{{ name }}.js" type="module"></script>
