feat: admin group files

--- a/public/admin.html
+++ b/public/admin.html
@@ -25,5 +25,13 @@
     <ul id="notifications"></ul>
 </aside>
 
+<section id="sorting-options-container">
+    <label for="group-by">Group by:</label>
+    <select id="group-by">
+        <option value="user" selected>User</option>
+        <option value="mailName">Mail Name</option>
+    </select>
+</section>
+
 <div id="app"></div>
 <link rel="stylesheet" href="/app/pages/mails.css">
