--- a/public/upload.html
+++ b/public/upload.html
@@ -2,6 +2,7 @@
 <form>
     <div>
         <label for="mailName"><span translate="Subject"></span>:</label>
+        <select name="mailNameSelect" id="mailNameSelect"></select>
         <input type="text" name="mailName" id="mailName" translate-placeholder="Enter mail name" required>
     </div>
     <div>
